policies/archive/run-as.yaml
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: run-as-non-root
  annotations:
    policies.kyverno.io/title: Require runAsNonRoot
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures
      `runAsNonRoot` is set to `true`. A known issue prevents a policy such as this
      using `anyPattern` from being persisted properly in Kubernetes 1.23.0-1.23.2.
spec:
  validationFailureAction: Enforce
  admission: true
  background: true
  rules:
    - name: run-as-non-root
      match:
        any:
        - resources:
            kinds:
              - Pod
      skipBackgroundRequests: true
      validate:
        message: >-
          Running as root is not allowed. Either the field spec.securityContext.runAsNonRoot
          must be set to `true`, or the fields spec.containers[*].securityContext.runAsNonRoot,
          spec.initContainers[*].securityContext.runAsNonRoot, and spec.ephemeralContainers[*].securityContext.runAsNonRoot
          must be set to `true`.          
        anyPattern:
        - spec:
            securityContext:
              runAsNonRoot: "true"
            =(ephemeralContainers):
            - =(securityContext):
                =(runAsNonRoot): "true"
            =(initContainers):
            - =(securityContext):
                =(runAsNonRoot): "true"
            containers:
            - =(securityContext):
                =(runAsNonRoot): "true"
        - spec:
            =(ephemeralContainers):
            - securityContext:
                runAsNonRoot: "true"
            =(initContainers):
            - securityContext:
                runAsNonRoot: "true"
            containers:
            - securityContext:
                runAsNonRoot: "true"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: run-as-user
  annotations:
    policies.kyverno.io/title: Require Run As Non-Root User
    policies.kyverno.io/category: Pod Security Standards (Restricted)
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers must be required to run as non-root users. This policy ensures
      `runAsUser` is either unset or set to a number greater than zero.
spec:
  validationFailureAction: Enforce
  admission: true
  background: true
  rules:
    - name: run-as-user
      match:
        any:
        - resources:
            kinds:
              - Pod
      skipBackgroundRequests: true    
      validate:
        message: >-
          Running as root is not allowed. The fields spec.securityContext.runAsUser,
          spec.containers[*].securityContext.runAsUser, spec.initContainers[*].securityContext.runAsUser,
          and spec.ephemeralContainers[*].securityContext.runAsUser must be unset or
          set to a number greater than 1000.
        pattern:
          spec:
            =(securityContext):
              =(runAsUser): ">=1001"
            =(ephemeralContainers):
            - =(securityContext):
                =(runAsUser): ">=1001"
            =(initContainers):
            - =(securityContext):
                =(runAsUser): ">=1001"
            containers:
            - =(securityContext):
                =(runAsUser): ">=1001"
---
apiVersion: kyverno.io/v1
kind: ClusterPolicy
metadata:
  name: run-as-group
  annotations:
    policies.kyverno.io/title: Require Non-Root Groups
    policies.kyverno.io/category: Sample, EKS Best Practices
    policies.kyverno.io/severity: medium
    policies.kyverno.io/subject: Pod
    policies.kyverno.io/description: >-
      Containers should be forbidden from running with a root primary or supplementary GID.
      This policy ensures the `runAsGroup`, `supplementalGroups`, and `fsGroup` fields are set to a number
      greater than zero (i.e., non root). A known issue prevents a policy such as this
      using `anyPattern` from being persisted properly in Kubernetes 1.23.0-1.23.2.
spec:
  validationFailureAction: Enforce
  admission: true
  background: true
  rules:
    - name: run-as-group
      skipBackgroundRequests: true
      validate:
        message: >-
          Running with root group IDs is disallowed. The fields
          spec.securityContext.runAsGroup, spec.containers[*].securityContext.runAsGroup,
          spec.initContainers[*].securityContext.runAsGroup, and
          spec.ephemeralContainers[*].securityContext.runAsGroup must be
          set to a value greater than 1000.
        anyPattern:
        - spec:
            securityContext:
              runAsGroup: ">=1001 & <=65535"
            =(ephemeralContainers):
              - =(securityContext):
                  =(runAsGroup): ">=1001 & <=65535"
            =(initContainers):
              - =(securityContext):
                  =(runAsGroup): ">=1001 & <=65535"
            containers:
              - =(securityContext):
                  =(runAsGroup): ">=1001 & <=65535"
        - spec:
            =(ephemeralContainers):
              - securityContext:
                  runAsGroup: ">=1001 & <=65535"
            =(initContainers):
              - securityContext:
                  runAsGroup: ">=1001 & <=65535"
            containers:
              - securityContext:
                  runAsGroup: ">=1001 & <=65535"
      match:
        any:
        - resources:
            kinds:
              - Pod
